--- a/_includes/blocks/breadcrumbs.html
+++ b/_includes/blocks/breadcrumbs.html
@@ -1,123 +1,54 @@
-<!--
 <div class="breadcrumbs">
   <div class="breadcrumbs__item">
-    <div class="breadcrumbs__link"><span class="breadcrumbs__type">Bril</span> <span class="breadcrumbs__label">Jaarplan 2016 - Staf</span></div>
-    <div class="breadcrumbs__selector">
-      <input type="input" placeholder="filter">
-      <ul>
-        <li>Dashboard</li>
-        <li>Finace &amp; Admin</li>
-        <li>Marketing &amp; Design</li>
-        <li>pmx Engineering</li>
-        <li>Professional Services</li>
-        <li>Wiki</li>
-      </ul>
-    </div>
-  </div>
-  <div class="breadcrumbs__item">
-    <div class="breadcrumbs__link"><span class="breadcrumbs__type">Doelstelling</span> <span class="breadcrumbs__label">De aanbevelingen van Audit Vlaanderen m.b.t. organisatiebeheersing uitvoeren</span></div>
-    <div class="breadcrumbs__selector">
-      <input type="input" placeholder="filter">
-      <ul>
-        <li>Dashboard</li>
-        <li>Finace &amp; Admin</li>
-        <li>Marketing &amp; Design</li>
-        <li>pmx Engineering</li>
-        <li>Professional Services</li>
-        <li>Wiki</li>
-      </ul>
-    </div>
-  </div>
-  <div class="breadcrumbs__item">
-    <div class="breadcrumbs__link"><span class="breadcrumbs__type">Project</span> <span class="breadcrumbs__label">D06.0/P03 - Een monitoringsysteem uitbouwen voor de opvolging en bijsturing van</span></div>
-    <div class="breadcrumbs__selector">
-      <input type="input" placeholder="filter">
-      <ul>
-        <li>Dashboard</li>
-        <li>Finace &amp; Admin</li>
-        <li>Marketing &amp; Design</li>
-        <li>pmx Engineering</li>
-        <li>Professional Services</li>
-        <li>Wiki</li>
-      </ul>
-    </div>
-  </div>
-  <div class="breadcrumbs__item">
-    <div class="breadcrumbs__link"><span class="breadcrumbs__type">Mijlpaal</span> <span class="breadcrumbs__label">M01 - Processen varend erfgoed</span></div>
-    <div class="breadcrumbs__selector">
-      <input type="input" placeholder="filter">
-      <ul>
-        <li>Dashboard</li>
-        <li>Finace &amp; Admin</li>
-        <li>Marketing &amp; Design</li>
-        <li>pmx Engineering</li>
-        <li>Professional Services</li>
-        <li>Wiki</li>
-      </ul>
-    </div>
-  </div>
-</div>
--->
 
-<div class="itemBox">
-  <div class="itemBoxTable">
-      <div class="itemBoxBody">
-        <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner">
-
-              <div class="pmx-field">
-                <div class="pmx-field__inner">
-                  <div class="pmx-selector pmx-selector--collapsed">
-                    <div class="pmx-selector__item">
-                      <div class="pmx-selector__block ">
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Bril</span>
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Jaarplan 2016 - Staf</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner">
-
-              <div class="pmx-field">
-                <div class="pmx-field__inner">
-                  <div class="pmx-selector pmx-selector--collapsed">
-                    <div class="pmx-selector__item">
-                      <div class="pmx-selector__block ">
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Doelstelling</span>
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">De aanbevelingen van Audit Vlaanderen m.b.t. organisatiebeheersing uitvoeren</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner">
-
-              <div class="pmx-field">
-                <div class="pmx-field__inner">
-                  <div class="pmx-selector pmx-selector--collapsed">
-                    <div class="pmx-selector__item">
-                      <div class="pmx-selector__block ">
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Project</span>
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">D06.0/P03 - Een monitoringsysteem uitbouwen voor de opvolging en bijsturing van</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </li>
-        </ul>
+    <div class="pmx-selector">
+      <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__block">
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--label">Doelstelling</div>
+        </div>
       </div>
+    </div>
+
+    <div class="pmx-link">
+      <a href="#">De aanbevelingen van Audit Vlaanderen m.b.t. organisatiebeheersing uitvoeren</a>
+    </div>
+
+    <div class="breadcrumbs__selector">
+      <input type="input" placeholder="filter">
+      <ul>
+        <li>Dashboard</li>
+        <li>Finace &amp; Admin</li>
+        <li>Marketing &amp; Design</li>
+        <li>pmx Engineering</li>
+        <li>Professional Services</li>
+        <li>Wiki</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="breadcrumbs__item">
+    <div class="pmx-selector">
+      <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__block">
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--label">Mijlpaal</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="pmx-link">
+      <a href="#">M01 - Processen varend erfgoed</a>
+    </div>
+
+    <div class="breadcrumbs__selector">
+      <input type="input" placeholder="filter">
+      <ul>
+        <li>Dashboard</li>
+        <li>Finace &amp; Admin</li>
+        <li>Marketing &amp; Design</li>
+        <li>pmx Engineering</li>
+        <li>Professional Services</li>
+        <li>Wiki</li>
+      </ul>
+    </div>
   </div>
 </div>
