--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -39,6 +39,9 @@
 <!-- calendar -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/calendar.js"></script>
 
+<!-- breadcrumbs -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
+
 
 <!-- OUR PLUGINS/COMPONENTS _NOT_ USED IN EVERY PAGE -->
 <!-- new app page -->
