--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -28,7 +28,8 @@
 @import "components/tabs.css";
 
 @import "components/itemBox.css";
-@import "components/selector.css";
+@import "components/pmx-selector.css";
+@import "components/pmx-link.css";
 @import "components/multiSelector.css";
 
 // temporary, because of js
