--- a/sass/components/pmx-selector.scss
+++ b/sass/components/pmx-selector.scss
@@ -18,7 +18,7 @@
     }
   }
 
-  &--focus {
+  &:focus-within:focus-within:focus-within:focus-within {
     border: 1px solid #F7F7F7;
     border-radius: 3px;
     box-shadow: 0 0 200px rgba(0,0,0,.1);
@@ -62,6 +62,20 @@
     margin: -5px -1px;
     white-space: nowrap;
     overflow: hidden;
+
+    &--overflow {
+      &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 50px;
+        height: 100%;
+        color: rgba(255, 255, 255, 0.95);
+        box-shadow: inset -10px 0 20px 0;
+        pointer-events: none;
+      }
+    }
 
     // &::after {
     //   content: '';
