update item header

--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -1,9 +1,10 @@
 <header class="item-header">
-  <div class="item-header__type">
-    <span>Bug</span>
+  <div class="item-header__meta">
+    <span class="item-header__type item-header__type--bug">Bug</span>
+    <span class="item-header__id">391441</span>
   </div>
 
-  <h2 class="item-header__title">PMX - Fix horizontal scroll alterneting in FireFox <span class="item-header__id">391441</span></h2>
+  <h2 class="item-header__title">PMX - Fix horizontal scroll alterneting in FireFox</h2>
 
   <div class="item-header__actions">
     <div class="pmx-selector">
