--- a/sass/app.scss
+++ b/sass/app.scss
@@ -39,7 +39,7 @@ body.page-Filter,
 body.page-Tag-picker {
   position: relative;
   background-color: #FFF;
-  margin: 50px 5px 5px 50px;
+  margin: 50px 25%;
 }
 
 
