--- a/sass/components/pmx-selector.scss
+++ b/sass/components/pmx-selector.scss
@@ -45,6 +45,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
 
+    font-family: 'tenforce', sans-serif;
     font-size: 12px;
     font-style: normal;
     font-weight: 600;
