--- a/sass/blocks/item-header.scss
+++ b/sass/blocks/item-header.scss
@@ -10,49 +10,50 @@
     position: relative;
     background-color: #FFF;
     border-bottom: 2px dashed #CCC;
+    padding: 10px 15px;
+
+    &__title {
+      position: relative;
+      display: inline-block;
+      max-width: 75%;
+
+      h2 {
+        font-weight: 600;
+        font-size: 24px;
+        margin: 5px 0;
+      }
+    }
 
     &__meta {
       position: relative;
-      padding: 10px 0;
+      margin: 0 0 0 -15px;
     }
 
     &__type {
+      display: inline-block;
+      background-color: #e6e6e6;
+      padding: 3px 10px 3px 15px;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 600;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      color: #808080;
+
       &--meeting {
-        position: relative;
-        display: inline-block;
-        background-color: #bf920b;
+        background-color: #11ceff;
         color: #FFF;
-        text-transform: uppercase;
-        font-size: 10px;
-        font-weight: 700;
-        padding: 1px 5px 1px 15px;
-        margin: 8px 0 0;
+        border-radius: 0 5px 5px 0;
       }
 
       &--bug {
-        background-color: #e6e6e6;
-        padding: 3px 10px 3px 15px;
         border-radius: 0 10px 10px 0;
-        margin: 8px 0 0 0;
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 600;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-        color: #808080;
       }
 
       &--story {
-        position: relative;
-        display: inline-block;
-        background-color: #11cfff;
+        background-color: #BF920B;
         color: #FFF;
-        text-transform: uppercase;
-        font-size: 10px;
-        font-weight: 600;
-        padding: 12px 5px 3px;
-        margin: 0 0 0 17px;
-        letter-spacing: 1px;
+        border-radius: 0 5px 5px 0;
       }
     }
 
@@ -60,22 +61,19 @@
       margin: 0 5px;
     }
 
-    &__title {
-      position: relative;
-      display: inline-block;
-      font-weight: 600;
-      font-size: 24px;
-      color: #000;
-      padding: 0 15px 10px 15px;
+    &__actions {
+      position: absolute;
+      right: 15px;
+      top: 50%;
+      transform: translateY(-50%);
+      max-width: 25%;
+      width: 100%;
+      text-align: right;
     }
 
-    &__actions {
+    &__action {
       display: inline-block;
-      float: right;
-
-      .pmx-selector {
-        margin: 0 0 0 10px;
-      }
+      margin: 0 0 0 10px;
     }
   }
 }
