update itme headers

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,9 @@
         {% include blocks/app-header.html %}
       </header>
 
-      <div class="item item--story">
+      {% include blocks/breadcrumbs.html %}
+
+      <div class="item">
         <div class="sticky-header">
           {% include blocks/item-header.html %}
         </div>
