--- a/sass/blocks/item-header.scss
+++ b/sass/blocks/item-header.scss
@@ -21,6 +21,13 @@
         font-weight: 600;
         font-size: 24px;
         margin: 5px 0;
+
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+        max-height: 90px;
       }
     }
 
